--- a/css/laundromat.css
+++ b/css/laundromat.css
@@ -1,30 +1,52 @@
-body,h4 {
-  font-family: "Open Sans", Georgia, Times, serif;
+body, h4 {
+    font-family: "Open Sans", Georgia, Times, serif;
 }
-
+#title {
+    font-weight: bold;
+    text-align: center;
+}
 .row {
-  padding-bottom: 20px;
-
+    padding-bottom: 15px;
 }
-
 a {
-  word-break: break-all;
+    word-break: break-all;
 }
-
+.list-group-item:first-child {
+    margin-top: 10px;
+    border-top-left-radius: 0px;
+    border-top-right-radius: 0px;
+}
+.list-group-item:last-child {
+    margin-bottom: 0;
+    border-bottom-right-radius: 0px;
+    border-bottom-left-radius: 0px;
+}
+.form-control {
+    border-radius: 0px;
+}
+li h4 {
+    font-weight: bold;
+}
+#all-map a {
+    border-radius: 1px;
+    margin-left: 10px;
+    width: 50%;
+}
+.list-btn {
+    border-radius: 1px;
+    margin: 15px 0px 5px 0px;
+}
 .ggmap {
-  position: relative;
-  padding-bottom: 56.25%;
-  padding-top: 30px;
-  height: 0;
-  overflow: hidden;
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 30px;
+    height: 0;
+    overflow: hidden;
 }
-
-.ggmap iframe,
-.ggmap object,
-.ggmap embed {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+.ggmap iframe, .ggmap object, .ggmap embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
